--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-aiogram==3.*
-fastapi
-uvicorn[standard]
-gunicorn
-aiosqlite
-python-dotenv
+aiogram==3.0.0b7
+fastapi==0.95.2
+uvicorn==0.22.0
+gunicorn==20.1.0
+aiosqlite==0.19.0
